--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "hammerjs": "^2.0.8",
+    "nodemailer": "^4.6.5",
     "rxjs": "^6.0.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
